--- a/cart.html
+++ b/cart.html
@@ -48,10 +48,11 @@
                     </tr>
                 </thead>
                 <tbody id="bodyy">
-
+                    
                 </tbody>
                 
             </table>
+            <button id="removeall"> Remove all </button>
         </section>
         <section id="cart-add" class="section-p1">
             <div id="coupon">
