--- a/sproduct.html
+++ b/sproduct.html
@@ -31,76 +31,77 @@
         <div id="prodetails" class="section-p1">
             
         </div>
-        <div id="product1" class="section-p1" >
+        <div id="product1" class="section-p1">
             <h2>Featured Products</h2>
-<p>Summer Collection New Modern Design</p>
-<div class="pro-container">
-    <div class="pro">
-        <img src="img/products/n1.jpg" alt="">
-        <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
-            <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+            <p>Summer Collection New Modern Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img id="select-1" src="img/products/n1.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
+                </div>
+                <div class="pro">
+                    <img id="select-2" src="img/products/n2.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
+                </div>
+                <div class="pro">
+                    <img id="select-3" src="img/products/n3.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
+                </div>
+                <div class="pro">
+                    <img id="select-4" src="img/products/n4.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
+                </div>
             </div>
-            <h4>$78</h4>
         </div>
-        <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
-    </div>
-    <div class="pro">
-        <img src="img/products/n2.jpg" alt="">
-        <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
-            <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-        </div>
-        <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
-    </div>
-    <div class="pro">
-        <img src="img/products/n3.jpg" alt="">
-        <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
-            <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-        </div>
-        <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
-    </div>
-    <div class="pro">
-        <img src="img/products/n4.jpg" alt="">
-        <div class="des">
-            <span>adidas</span>
-            <h5>Cartoon Astronaut T-Shirts</h5>
-            <div class="star">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-        </div>
-        <a href="#"><i  class="fa-solid fa-cart-shopping cart "></i></a>
-    </div>
-</div>
-        </div>
+        
         <div id="newsletter" class="section-p1 section-m1">
             <div class="des">
                 <h4>Sign Up For newsletters</h4>
